--- a/code/ActivityClassifier/res/values/strings.xml
+++ b/code/ActivityClassifier/res/values/strings.xml
@@ -25,6 +25,7 @@ if you want to use the service properly.
     <string name="activity_classified_paddling">Paddling</string>
     <string name="activity_classified_travelling">Travelling</string>
     <string name="activity_classified_active">Active</string>
+    <string name="activity_off">OFF</string>
     <!--     <string name="activity_waiting">Waiting</string> -->
     
     <string name="activity_classified_walking_stairs">Walking (stairs)</string> 
